[metadata]
name = PyScaffolder
version = 1.5.2
author = Jirawat Iamsamang
author_email = nodtem66@gmail.com
description = Generate 3D mesh from implicit surface and an input mesh
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nodtem66/Scaffolder
project_urls =
    Bug Tracker = https://github.com/nodtem66/Scaffolder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
# these error codes interfere with Black
ignore = E203, E231, E501, W503, B950
select = C,E,F,W,B,B9